# homework_13_1

./: .coverage  .env  .flake8  README.md  pyproject.toml
src/: external_api.py  main.py  read_from_csv.py  read_from_excel.py  utils.py
tests/: test_external_api.py  test_main.py  test_read_from_csv.py  test_read_from_excel.py
